[tool.poetry]
name = "dora"
version = "0.1.0"
description = ""
authors = ["s-index <sec.index.jp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
dora = "dora.main:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
